# advent-of-code-2025

./: .gitignore  Cargo.toml  Justfile  README.md
src/: grid.rs
