[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = "line-tables-only"

[lib]
name = "aoclib"
path = "src/lib.rs"

[dependencies]
coordinates = "0.4.0"
good_lp = { version = "1.14.2", default-features= false, features = ["coin_cbc"] }
coin_cbc = { version = "*", default-features = false}
grid = "1.0.0"
itertools = "0.14.0"
microlp = "0.2.11"
ndarray = "0.17.1"
nom = "8.0.0"
num = "0.4.3"
rayon = "1.11.0"
rand = "0.9.2"
